[gd_scene load_steps=2 format=3 uid="uid://lore_ui"]

[ext_resource type="Script" path="res://scripts/ui/lore_ui.gd" id="1_loreui"]

[node name="LoreUI" type="CanvasLayer"]
layer = 2
script = ExtResource("1_loreui")

[node name="LorePanel" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -400.0
offset_top = -200.0
offset_right = 400.0
offset_bottom = 200.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextLabel" type="RichTextLabel" parent="LorePanel"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 20.0
offset_top = 20.0
offset_right = -20.0
offset_bottom = -40.0
grow_horizontal = 2
grow_vertical = 2
bbcode_enabled = true
text = "Testo del lore qui..."

[node name="CloseHint" type="Label" parent="LorePanel"]
layout_mode = 1
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -100.0
offset_top = -30.0
offset_right = 100.0
offset_bottom = -10.0
grow_horizontal = 2
grow_vertical = 0
text = "Premi [E] per chiudere"
horizontal_alignment = 1

